--- a/stacksy/Gemfile
+++ b/stacksy/Gemfile
@@ -7,6 +7,9 @@ gem 'rails', '3.2.18'
 
 gem 'sqlite3'
 
+gem 'devise'
+gem 'omniauth-facebook'
+
 gem 'haml-rails'
 
 # Gems used only for assets and not required
