--- a/stacksy/Gemfile
+++ b/stacksy/Gemfile
@@ -11,6 +11,8 @@ gem 'devise'
 gem 'omniauth-facebook'
 
 gem 'haml-rails'
+gem 'sunspot_rails'
+gem 'ransack'
 
 
 # Gems used only for assets and not required
